# plugins

./: CMakeLists.txt
chromium/src/: extension.cpp
qmlboxmodel/: CMakeLists.txt
qmlboxmodel/src/: frontendplugin.cpp  frontendplugin.h  mainwindow.cpp  mainwindow.h
widgetboxmodel/: CMakeLists.txt
